Updating `README.md` & `API DOC`
