# src/routes/customer.js
@@ -7,6 +7,6 @@ router.patch('/v1/customers/:customerId', Customer.patch);
 router.post('/v1/customers/addAddress/:customerId', Customer.addAddress);
 router.patch('/v1/customers/updateAddress/:addressId', Customer.updateAddress);
 router.delete('/v1/customers/deleteAddress/:addressId', Customer.deleteAddress);
-router.get('/v1/customers/getPaidAmount/:customerId', Customer.getPaidAmount);
+router.get('/v1/customers/getTotalAmount/:customerId', Customer.getTotalAmount);
 
 module.exports = router;
